--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "server": "json-server --watch db.json --port 3004 -d 1500"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.0",
     "json-server": "^0.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
